[package]
authors = ["Antoni Boucher <antoni.boucher@adgear.com>"]
name = "webkit-bug-extension"
version = "0.1.0"

[lib]
crate-type = ["dylib"]

[dependencies]
glib = "^0.1.3"
glib-sys = "^0.3.4"

[dependencies.webkit2gtk-webextension]
git = "https://github.com/antoyo/webkit2gtk-webextension-rs"

[dependencies.webkit2gtk-webextension-sys]
git = "https://github.com/antoyo/webkit2gtk-webextension-sys-rs"
